src/test/ui/struct-fields-hints.stderr
error[E0560]: struct `A` has no field named `bar`
  --> $DIR/struct-fields-hints.rs:20:9
   |
20 |         bar : 42,
   |         ^^^ field does not exist - did you mean `car`?

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0560"
